force-app/main/default/objects/Auction__c.object
<CustomObject>
    <description>an object representing an auction for a product</description>
    <fields>
        <fullName>Auction_End_Date__c</fullName>
        <description>the date the auction ends</description>
        <label>Auction End Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Current_Bid__c</fullName>
        <description>the current bid price of the product</description>
        <label>Current Bid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>the product the auction is selling</description>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Auctions</relationshipLabel>
        <relationshipName>Auctions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Starting_Bid__c</fullName>
        <description>the starting bid of the product</description>
        <label>Starting Bid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Auction</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Auction Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Auctions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>